--- a/hawkhack2025/src/Components/Header/index.scss
+++ b/hawkhack2025/src/Components/Header/index.scss
@@ -47,3 +47,78 @@
 }
 
 // Mobile Sizing
+
+@media (max-width:768px){
+    .link-container a{
+        display: none;
+    }
+
+    .menu{
+        width: 58px;
+        background: transparent;
+        height: 58px;
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+        color: black ;
+        font-size: 2.5rem;
+    }
+    .menu-container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        background-color: black;
+        color: #fff;    
+        flex-direction: column;
+        z-index: 10;
+
+        p { 
+            display: inline-flex;
+            color: #fff;
+            text-decoration: none;
+            height: 80px;
+            overflow: hidden;
+            font-size: 24px;
+            text-transform: uppercase;
+            margin-top: 50px;
+
+        }
+        p:hover {
+            color: #bdbdbd;
+            cursor: pointer;
+        }
+
+        +p {
+            margin-top: 0;
+
+        }
+
+        .btn-close {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            justify-content: center;
+            width: 45px;
+            height: 45px;
+            border: 2px solid #bdbdbd;
+            border-radius: 58px;
+            top:20px;
+            right: 20px;
+            z-index: 15;
+            position: absolute;
+            cursor: pointer;
+        }
+    }
+}
+
+@media (min-width:769px){
+    .menu {
+        display: none;
+    }
+    .menu-container {
+        display: none;
+    }
+}
