--- a/hawkhack2025/src/Components/Header/index.scss
+++ b/hawkhack2025/src/Components/Header/index.scss
@@ -6,13 +6,13 @@
 
 .header-container {
     @extend .dflex;
+    background-color: #d1190d;
     position: fixed;
     width: 100%;
     height: 10%;
     top: 0;
     left: 0;
     padding: 0 50px;
-    background-color: transparent;
     z-index: 2;
     justify-content: space-between;
 
@@ -27,7 +27,7 @@
         font-size: 20px;
         text-decoration: none; 
         position: relative;
-        color: black;
+        color: #fff;
     }
 
     .link-container a::before {
@@ -60,7 +60,7 @@
         display: flex;
         align-items: center;
         cursor: pointer;
-        color: black ;
+        color: #fff ;
         font-size: 2.5rem;
     }
     .menu-container {
@@ -70,7 +70,7 @@
         position: fixed;
         width: 100%;
         height: 100%;
-        background-color: black;
+        background-color: #d1190d;
         color: #fff;    
         flex-direction: column;
         z-index: 10;
@@ -87,7 +87,7 @@
 
         }
         p:hover {
-            color: #bdbdbd;
+            color: #333333;
             cursor: pointer;
         }
 
@@ -103,7 +103,7 @@
             justify-content: center;
             width: 45px;
             height: 45px;
-            border: 2px solid #bdbdbd;
+            border: 2px solid #fff;
             border-radius: 58px;
             top:20px;
             right: 20px;
