--- a/hawkhack2025/src/Components/Header/index.scss
+++ b/hawkhack2025/src/Components/Header/index.scss
@@ -6,7 +6,7 @@
 
 .header-container {
     @extend .dflex;
-    background-color: #d1190d;
+    background-color: #333333;
     position: fixed;
     width: 100%;
     height: 10%;
@@ -15,6 +15,13 @@
     padding: 0 50px;
     z-index: 2;
     justify-content: space-between;
+
+    .logo {
+        font-size: 35px;
+        text-decoration: none;
+        color:#fff;
+        font-weight: 700;
+    }
 
     .link-container {
         @extend .dflex;
