--- a/hawkhack2025/src/Components/Home/index.scss
+++ b/hawkhack2025/src/Components/Home/index.scss
@@ -2,6 +2,7 @@ html, body {
     scroll-snap-type: y mandatory;
     overflow-y: scroll;
     height: 100%; /* Ensure the entire viewport height is used */
+    overflow-x: hidden;
     margin: 0; /* Remove any default margin for better alignment */
 
 }
@@ -15,20 +16,71 @@ html, body {
 
 .home-page {
     @extend .dflex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
     height: 100vh;
-    background-color: #333333
+    background-color: #d1190d;
 }
 
 .join-us {
     @extend .dflex;
     flex-direction: column;
-    align-items: left;
+    width: 50%;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin-left: 30px;
 }
 h1 {
     color:#fff;
-    font-size: 20px;
+    font-size: 19px;
+    font-weight: 200;
 }
 
 .hawkhack {
     font-size: 60px;
+    font-weight: 700;
+}
+
+.button {
+    @extend .dflex;
+    width: 45%;
+    height: 15%;
+    background: #333333;
+    border-radius: 60px;
+    cursor: pointer;
+    margin-top: 30px;
+    padding: 10px;
+    border: none;
+}
+
+.apply {
+    color: #fff;
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.count-down {
+    @extend .dflex;
+    width: 50%;
+    height: 100vh;
+}
+
+.date {
+    @extend .dflex;
+    position: absolute;
+    top: 15%;
+    right: -20px;
+    background-color: #fff;
+    width:300px;
+    height:50px;
+    border-radius:15px;
+
+}
+
+.date-text {
+    font-size: 25px;
+    padding-right: 20px;
+    font-weight: 700;
+    color: #d1190d;
 }
