changed count down color

--- a/hawkhack2025/src/Components/Timer/index.scss
+++ b/hawkhack2025/src/Components/Timer/index.scss
@@ -3,12 +3,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background: #333333;
-    color:#fff;
+    background: #fff;
+    color:#d1190d;
     font-size: 3rem;
     width: 9rem;
     padding-top: 0.75rem;
-    border-radius: 0.5rem;
+    border-radius: 2rem;
     text-align: center;
     font-weight: 700;
 }
