--- a/hawkhack2025/src/Components/Team/index.scss
+++ b/hawkhack2025/src/Components/Team/index.scss
@@ -5,4 +5,64 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
 }
+.face-cards {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    gap:5em;
+}
+.face-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+.face-container {
+    background-color: #333333;
+    height: 15em;
+    width: 15em;
+    border-radius: 50%;
+    overflow: hidden;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 40px;
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
+    transform: translateY(0);
+    transform: scale(1);
+}
+
+.meet {
+    font-size: 4em;
+    color: #333333;
+    margin-bottom: 1em;
+    font-weight: 200;
+}
+
+.name {
+    font-size: 2em;
+    font-weight: 700;
+    color: #d1190d;
+}
+
+.headshot {
+    width:100%;
+    height: 100%;
+    object-fit: cover;
+    border:5px solid #d1190d;
+    border-radius: 50%;
+}
+
+.face-container:hover {
+    transform: translateY(-0.5rem);
+    box-shadow: 0 12px 8px rgba(0, 0, 0, 0.2);
+    scale: (1.05);
+}
+
+
