--- a/hawkhack2025/src/Components/Home/index.scss
+++ b/hawkhack2025/src/Components/Home/index.scss
@@ -87,7 +87,7 @@ h1 {
 }
 
 section {
-    scroll-snap-align: center;
+    scroll-snap-align: start;
     height: 100vh;
 }
 
@@ -99,4 +99,52 @@ section {
 #team{
     scroll-snap-align: auto;
     overflow-y: auto;
+}
+
+@media (max-width:1150px){
+    .home-page {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+    }
+
+    .join-us {
+        width: 100%;
+        height: 30%;
+        align-items: center;
+        justify-content: center;
+        margin-left: 0;
+        text-align: center;
+        gap: 20px;
+    }
+
+
+    .count-down{
+        width: 100%;
+        height: 30%;
+        margin-top: 20px;
+    }
+    
+    .hawkhack {
+        font-size: 40px;
+    }
+    .button {
+        width: 50%;
+        padding: 12px;
+    }
+
+    .apply {
+        font-size: 16px;
+    }
+
+    .date {
+        width: 90%;
+        right: unset;
+    }
+    .timer {
+        margin-top: 40%;
+    }
+
+
 }
