--- a/hawkhack2025/src/Components/Timer/index.scss
+++ b/hawkhack2025/src/Components/Timer/index.scss
@@ -16,7 +16,8 @@
 .timer {
     display: flex;
     justify-content: flex-start;
-    margin-top: 2.5rem;
+
+
     gap: 0.75rem;
 }
 
@@ -24,4 +25,15 @@ small {
     font-size: 20px;
     padding-bottom: 5px;
     font-weight: 200;
+}
+
+@media (max-width:768px) {
+    .items {
+        width:5.75rem;
+        font-size: 3rem;
+    }
+
+    small {
+        font-size: 15px;
+    }
 }
