--- a/src/Components/About/index.scss
+++ b/src/Components/About/index.scss
@@ -49,17 +49,17 @@ img {
     }
 
     .text {
-        margin-top: 50px;
+        margin-top: 3rem;
         width: 90%; /* Use more of the screen width */
         margin-left: 0; /* Center the text block */
         text-align: center; /* Align text to center for better readability */
         
-        h1 {
+        .welcome {
             font-size: 2rem; /* Adjust font size for smaller screens */
         }
 
-        p {
-            font-size: 1rem; /* Slightly smaller font size for mobile */
+        .about-text {
+            font-size:1rem; /* Slightly smaller font size for mobile */
         }
     }
 
@@ -69,7 +69,7 @@ img {
     }
 
     img {
-        width: 80%; /* Slightly larger image on mobile for better visual appeal */
+        width: 70%; /* Slightly larger image on mobile for better visual appeal */
     }
 }
 
@@ -79,8 +79,8 @@ img {
             font-size: 1.8rem; /* Smaller heading for very small screens */
         }
 
-        p {
-            font-size: 0.95rem; /* Adjust paragraph font size */
+        .about-text {
+            font-size: 0.7rem; /* Adjust paragraph font size */
         }
     }
 
