--- a/src/Components/Header/index.scss
+++ b/src/Components/Header/index.scss
@@ -17,10 +17,13 @@
     justify-content: space-between;
 
     .logo {
-        font-size: 35px;
-        text-decoration: none;
-        color:#fff;
-        font-weight: 700;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        img {
+            height: 90%;
+        }
     }
 
     .link-container {
@@ -59,6 +62,12 @@
     .link-container a{
         display: none;
     }
+
+    .header-container {
+        justify-content: space-between;
+    }
+
+    
 
     .menu{
         width: 58px;
