--- a/src/Components/Header/index.scss
+++ b/src/Components/Header/index.scss
@@ -21,7 +21,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        img {
+        .image-logo {
             height: 90%;
         }
     }
