fixed the path for the terms and conditions

--- a/src/Components/Team/index.scss
+++ b/src/Components/Team/index.scss
@@ -8,7 +8,18 @@
     flex-direction: column;
     margin: 0;
     padding: 0;
+
 }
+
+.terms {
+
+    text-decoration: none;
+    color: #d1190d;
+    margin-top: 2rem;
+
+}
+
+
 .face-cards {
     display: flex;
     flex-direction: row;
